--- a/_posts/2018-11-21-nDF8.html
+++ b/_posts/2018-11-21-nDF8.html
@@ -1,4 +1,11 @@
 --- 
-published: false 
+title: "بررسی ویژگی‌های آثار منسوب به معماران شیرازی در دورۀ تیموریان|مریم صادقیان" 
+authors: asmaneh 
+types: research 
+featured: false
+slug: nDF8 
 --- 
-  
+<p>پژوهشگران برجستۀ معماری تیموریان همچون لیزا گلمبک، دانلد ویلبر و برنارد اکین مدعی&zwnj;اند در میانۀ دورۀ تیموریان سبکی مجزا وجود دارد. سبکی که آثار آن منسوب به معمارانی با نسب شیرازی است و بسیاری از ویژگی&zwnj;های این سبک برگرفته از سنت&zwnj;های معماری شهرهای مرکزی ایران است. گلمبک این سبک را مکتب شیراز نامیده است. او آثار این سبک را در محدودۀ زمانی حکومت تیمور و شاهرخ و محدودۀ مکانی خراسان و ورارود معرفی می&zwnj;کند. با وجود اینکه این مورخان چنین ایده&zwnj;ای را بیان می&zwnj;کنند اما دلایل و شواهد طرح چنین ایده ای تاکنون بررسی نشده است.&nbsp;</p>
+<p>در این تحقیق، مریم صادقیان، در پی بررسی ادعای دانشوران دربارۀ وجود سبکی با عنوان مکتب شیراز در دورۀ تیموریان و ویژگی&zwnj;های ذکر شده برای آن است. بدین منظور می&zwnj;کوشد، با استفاده از راهبردهای تاریخی و تحلیل صوری ادعای دانشواران پیشین دربارۀ وجود سبکی با عنوان &laquo;مکتب شیراز&raquo; در دورۀ تیموریان را بررسی کند. این تحقیق سه فصل دارد. در فصل اول، &laquo;سبک، مکتب و ویژگی&zwnj;های سبکی در تاریخ&zwnj;نامه&zwnj;های معماری تیموریان&raquo;، مراد محققان از سبک، مکتب و چیستی ویژگی&zwnj;های سبکی را در چهار تاریخ&zwnj;نامه-سبک&zwnj;شناسی معماری ایرانِ پیرنیا، معماری ایرانیِ پوپ، معماری تیموری در خراسانِ اکین و معماری تیموری در ایرانِ ویلبر و دیگران- روشن می&zwnj;کند. در فصل دوم، &laquo;سبک معماری تیموریان،&laquo;سبک شیرازی&raquo; و ویژگی&zwnj;های آنها&raquo;، تقسیم بندی معماری دورۀ تیموریان با محوریت موضوعات مختلف را مشخص می&zwnj;کند، همچنین ویژگی&zwnj;های معماری دورۀ تیموریان به طور کلی را مشخص و دسته بندی می&zwnj;کند و ویژگی&zwnj;های آثار مکتب شیراز و جایگاه این ویژگی&zwnj;ها را در میان ویژگی&zwnj;های&nbsp; دورۀ تیموریان را روشن می&zwnj;کند. در فصل سوم، &laquo;بررسی ویژگی&zwnj;های سبکی آثار مکتب شیراز&raquo;،&nbsp; با استناد به تعریف&zwnj;های عرضه شده از سبک، مکتب و ویژگی&zwnj;های سبکی در فصل اول، ویژگی&zwnj;های سبکی آثار منسوب به معماران شیرازی را می&zwnj;سنجد و صحت ادعای محققان دربارۀ این ویژگی&zwnj;ها&zwnj; را با مقابلۀ کالبد و شواهد تاریخی بررسی می&zwnj;کند. او در این بررسی عنوان &laquo;مکتب شیراز&raquo; را تنها به عنوان یک عنوان می&zwnj;پذیرد و آثار این سبک را به زمان حکومت شاهرخ و محدودۀ مکانی خراسان محدود می&zwnj;کند.</p>
+<p>&nbsp;</p>
+<p><strong>مریم صادقیان. &laquo;بررسی ویژگی&zwnj;های آثار منسوب به معماران شیرازی در دورۀ تیموریان&raquo;. پایان&zwnj;نامۀ کارشناسی&zwnj;ارشد مطالعات معماری ایران. استاد راهنمای اول: دکتر زهرا اهری، استاد راهنمای دوم: دکتر هادی صفایی&zwnj;پور. استاد مشاور: دکتر مهرداد قیومی بیدهندی. تهران: دانشگاه شهید بهشتی، آبان ۱۳۹۷</strong></p>
