--- a/_posts/2012-02-19-DFXd.html
+++ b/_posts/2012-02-19-DFXd.html
@@ -1,5 +1,5 @@
 --- 
-title: "انه در جهان شیرازیان: جستجوی نسبت بین خانه و فرهنگ سکونت در شیراز دورۀ قاجار| داوود اسماعیل‌زاده" 
+title: "خانه در جهان شیرازیان: جستجوی نسبت بین خانه و فرهنگ سکونت در شیراز دورۀ قاجار| داوود اسماعیل‌زاده" 
 authors: asmaneh 
 types: research 
 featured: false
