--- a/_posts/2021-10-10-isvG.html
+++ b/_posts/2021-10-10-isvG.html
@@ -1,5 +1,5 @@
 --- 
-title: "برگزاری سخنرانی مجازی: «زندگی خانگی و فرهنگ مصرفی در ایران: انقلاب‌های داخلی در عصر مدرن»" 
+title: "«زندگی خانگی و فرهنگ مصرفی در ایران: انقلاب‌های داخلی در عصر مدرن»؛ برگزاری سخنرانی مجازی" 
 authors: asmaneh 
 types: news 
 tags: زندگی خانگی,فرهنگ مصرف,سخنرانی مجازی,انقلاب ایران,مدرنیزاسیون,معماری داخلی,خانه,معماری خانه,پاملا کریمی 
@@ -8,9 +8,8 @@ featureImg: "/assets/img/posts/isvG.jpg"
 slug: isvG 
 gallery: 
 - image_path: "/assets/img/posts/isvG.jpg" 
-  title: "برگزاری سخنرانی مجازی: «زندگی خانگی و فرهنگ مصرفی در ایران: انقلاب‌های داخلی در عصر مدرن»" 
+  title: "«زندگی خانگی و فرهنگ مصرفی در ایران: انقلاب‌های داخلی در عصر مدرن»؛ برگزاری سخنرانی مجازی" 
  
-excerpt: به‌مناسبت انتشار ترجمۀ کتاب زندگی خانگی و فرهنگی مصرفی در ایران توسط انتشارات شیرازه 
 --- 
 <p>سخنران: دکتر پاملا کریمی (نویسندۀ کتاب)</p>
 <p>میزبان: دانشگاه تهران، دانشکدهٔ معماری، گروه مطالعات معماری ایران؛ با همكاری انجمن علمی مطالعات معماری ایران دانشگاه تهران</p>
