--- a/_posts/2021-10-09-UjV3.html
+++ b/_posts/2021-10-09-UjV3.html
@@ -1,5 +1,5 @@
 --- 
-title: "فراخوان مقاله به دهمین همایش ملی متن‌پژوهی ادبی با موضوع: «فرهنگ، هنر و ادبیات عامه»" 
+title: "«فرهنگ، هنر و ادبیات عامه»؛ فراخوان مقاله به دهمین همایش ملی متن‌پژوهی ادبی" 
 authors: asmaneh 
 types: news 
 tags: همایش,متن‌پژوهی,هنر و ادبیات عامه 
@@ -8,7 +8,7 @@ featureImg: "/assets/img/posts/UjV3.jpg"
 slug: UjV3 
 gallery: 
 - image_path: "/assets/img/posts/UjV3.jpg" 
-  title: "فراخوان مقاله به دهمین همایش ملی متن‌پژوهی ادبی با موضوع: «فرهنگ، هنر و ادبیات عامه»" 
+  title: "«فرهنگ، هنر و ادبیات عامه»؛ فراخوان مقاله به دهمین همایش ملی متن‌پژوهی ادبی" 
  
 --- 
 <p style="text-align: justify;">هنر و ادبیات عامه را به تعبیری می&zwnj;توان جنبه مردمی و غیر رسمی فرهنگ به شمار آورد که در کنار ادبیات رسمی به حیات خود ادامه داده و اگرچه از سوی حاکمان و قدرت&zwnj;های سیاسی چندان توجهی به آن نشده است، مردم و فرودستان اجتماع همواره به آن پرداخته&zwnj;اند و در حفظ و گسترش آن تلاش فراوان کرده&zwnj;اند. با مطالعهٔ فرهنگ و هنر و ادبیات عامه می&zwnj;توان بسیاری از جنبه&zwnj;های تاریخی و اجتماعی را مورد بررسی قرار داد و روایتی تازه از گذشته&zwnj;ٔ فرهنگی خود ارائه کرد. ایران زمین با توجه به گستردگی جغرافیایی و تنوع اقوام و فرهنگ&zwnj;های گوناگون، دارای یکی از پربارترین ذخایر فرهنگی در این عرصه است. در سالیان اخیر، کوشش&zwnj;های فراوانی در زمینهٔ مطالعات این حوزه شکل گرفته است و آثار ارزشمندی از سوی پژوهشگران ایرانی و خارجی منتشر شده است. با توجه به اهمیت این موضوع، دهمین همایش ملّی متن پژوهی ادبی به مطالعات فرهنگ، هنر و ادبیات عامه اختصاص یافته است و امید است این تلاش کوچک موجب توجه هرچه بیشتر به این حوزه گردد و شاهد افزایش پژوهش علمی در این زمینه باشیم.</p>
