--- a/_posts/2021-10-08-vcCs.html
+++ b/_posts/2021-10-08-vcCs.html
@@ -1,5 +1,5 @@
 --- 
-title: "برگزاری همایش مجازی: «دربارۀ وظیفه و قدرت نقد معماری»" 
+title: "«دربارۀ وظیفه و قدرت نقد معماری»؛ برگزاری همایش مجازی" 
 authors: asmaneh 
 types: news 
 tags: نقد معماری,همایش مجازی,وظیفۀ نقد معماری,تئوری نقد معماری,معماری نقادانه,نقد و معماری 
