--- a/_posts/2021-10-02-xfxv.html
+++ b/_posts/2021-10-02-xfxv.html
@@ -1,5 +1,5 @@
 --- 
-title: "برگزاری مجموعه گفتگو‌های مجازی: «‏از بدخشان تا زرنگ: گفتگوهایی دربارۀ میراث فرهنگی در افغانستان»" 
+title: "«‏از بدخشان تا زرنگ: گفتگوهایی دربارۀ میراث فرهنگی در افغانستان»؛ برگزاری مجموعه گفتگو‌های مجازی" 
 authors: asmaneh 
 types: news 
 tags: افغانستان,میراث فرهنگی افغانستان,بدخشان,زرنگ,بلخ,خراسان,هرات,لوگر,باستان شناسی ,باستان شناسی افغانستان 
@@ -9,19 +9,17 @@ attachedPDF: "/assets/pdf/xfxv.pdf"
 slug: xfxv 
 gallery: 
 - image_path: "/assets/img/posts/xfxv.png" 
-  title: "برگزاری مجموعه گفتگو‌های مجازی: «‏از بدخشان تا زرنگ: گفتگوهایی دربارۀ میراث فرهنگی در افغانستان»" 
+  title: "«‏از بدخشان تا زرنگ: گفتگوهایی دربارۀ میراث فرهنگی در افغانستان»؛ برگزاری مجموعه گفتگو‌های مجازی" 
  
-excerpt: افغانستان که کمابیش با خراسان تاریخی انطباق دارد و محل بسیاری از روایت.ها در شاهنامه حکیم فردوسی است، محمل حکومت‌های بزرگ و مهمی چون کوشانیان بوده و دارای میراث و تاریخی بسیار غنی و درازآهنگ است. به گواه تحقیقات باستان‌شناسان و پژوهشگران طی دو سدۀ اخیر، طیف مختلفی از آثار فرهنگی از دوران پیش از تاریخ تا روزگار معاصر در این منطقه شناسایی و گزارش شده است. شناخت فرهنگ و تمدن این سرزمین به شناخت بهتر فرهنگ و تمدن بشری کمک خواهد کرد.  
 --- 
-<p>زمان: ۴ اکتبر تا ۸ نوامبر ۲۰۲۱ | ۱۲ مهر تا ۱۷ آبان ۱۴۰۰</p>
-<p>میزبان:&nbsp; گروه باستان&zwnj;شناسی مؤسسۀ آموزش عالی معماری و هنر پارس (ایران)، آرکئواوریانت و دانشگاه لیون ۲ (فرانسه) و جامعۀ باستانشناسی ایران</p>
-<p>&nbsp;</p>
 <p style="text-align: justify;">شرایط بحرانیِ انسانی و سیاسیِ حاضر در افغانستان از ماه مرداد ۱۴۰۰ ،تجربه های تلخ و سرنوشت ناگواری که دو دهه پیش بر میراث فرهنگی این سرزمین گذشت را به یاد می&zwnj;آورد. این تجربه تلخ تنها محدود به تخریب بوداهای بامیان و صدها محوطه و بنای دیگر یا غارت اشیاء و اموال موزه&zwnj;ای نبود. آسیب بنیادی&zwnj;تر تحقیر و به هیچ شمردن میراث تمدنی و بی&zwnj;توجهی به نگهداری از آثار تاریخی و رواج قاچاق اموال فرهنگی بود. حوادث تلخی که اینک بار دیگر شدت گرفته و ما را در بیم و هراس قرار داده است.&nbsp;</p>
 <p style="text-align: justify;">افغانستان که کمابیش با خراسان تاریخی انطباق دارد و محل بسیاری از روایت.ها در شاهنامه حکیم فردوسی است، محمل حکومت&zwnj;های بزرگ و مهمی چون کوشانیان بوده و دارای میراث و تاریخی بسیار غنی و درازآهنگ است. به گواه تحقیقات باستان&zwnj;شناسان و پژوهشگران طی دو سدۀ اخیر، طیف مختلفی از آثار فرهنگی از دوران پیش از تاریخ تا روزگار معاصر در این منطقه شناسایی و گزارش شده است. برخی از مهم&zwnj;ترین نصوص فرهنگی و تمدنی افغانستان عبارت از حوزه فرهنگ زرتشتی، بودایی و اسالمی است. همچنین در دوره&zwnj;هایی پای فرهنگ و تمدن هلنی هم به این سرزمین باز شده بود. از این رو، شناخت فرهنگ و تمدن این سرزمین به شناخت بهتر فرهنگ و تمدن بشری کمک خواهد کرد.&nbsp;</p>
 <p style="text-align: justify;">مراکز فرهنگی و دانشگاهی در پی شوک آنچه که در روزها و ماه&zwnj;های اخیر بر سر افغانستان آمده هنوز مجالی برای واکنش مناسب نیافته است. در این شرایط، گروه باستان&zwnj;شناسی مؤسسۀ آموزش عالی معماری و هنر پارس (ایران)، آرکئواوریانت و دانشگاه لیون ۲ (فرانسه) و جامعۀ باستانشناسی ایران، در ادامه&zwnj;ی نشست&zwnj;های پیشین خود و به منظور توجه دادن به اهمیت فرهنگی و تمدنی این سرزمین، اقدام به برگزاری مجموعه سمینارهای آنلاین کرده است.&nbsp;</p>
 <p style="text-align: justify;">این گفتگوها با همراهی و حضور باستانشناسان، متخصصان و صاحبنظران در حوزه میراث فرهنگی افغانستان برگزار خواهد شد. متخصصان تجربه&zwnj;ها و یافته&zwnj;های ارزشمندشان به ویژه در ۲۰ سال اخیر را با علامندان در این زمینه به اشتراک خواهند گذاشت.</p>
 <p style="text-align: justify;">در روزهایی که مردم افغانستان ایام دشواری را سپری می کنند، فراهم کردن مجالی برای گفتگو دربارۀ میراث فرهنگی و تمدنی این سرزمین کمترین کاری است که می&zwnj;توان انجام داد.</p>
 <p>&nbsp;</p>
+<p>زمان: ۴ اکتبر تا ۸ نوامبر ۲۰۲۱ | ۱۲ مهر تا ۱۷ آبان ۱۴۰۰</p>
+<p>میزبان:&nbsp; گروه باستان&zwnj;شناسی مؤسسۀ آموزش عالی معماری و هنر پارس (ایران)، آرکئواوریانت و دانشگاه لیون ۲ (فرانسه) و جامعۀ باستانشناسی ایران</p>
 <p>- اطلاعات بیشتر و فهرست سخنرانی&zwnj;ها در پی&zwnj;دی&zwnj;اف ضمیمه شده است.</p>
 <p>- برای شرکت در نخستین جلسه به پیوند زیر&zwnj;مراجعه کنید:</p>
 <p dir="ltr"><a href="https://us02web.zoom.us/j/82107402434?pwd=K1E3MEVoSkhpd3JwWGpzczVIVmQ5Zz09" target="_blank" rel="noopener">https://us02web.zoom.us/j/82107402434?pwd=K1E3MEVoSkhpd3JwWGpzczVIVmQ5Zz09</a></p>
