--- a/_posts/2021-10-01-dymA.html
+++ b/_posts/2021-10-01-dymA.html
@@ -1,17 +1,15 @@
 --- 
-title: "فراخوان ارسال مقاله با موضوع «معماری به منزلۀ بدل‌سازی یا ابداع» برای مجلۀ معماری" 
+title: "«معماری به منزلۀ بدل‌سازی یا ابداع»| فراخوان ارسال مقاله برای مجلۀ معماری" 
 authors: asmaneh 
 types: news 
 tags: فراخوان مقاله,CFP,تقلید در معماری,بدل سازی در معماری,ابداع در معماری,خلاقیت در معماری,تقلب معماری,سرقت ادبی و معماری 
 featured: false
 slug: dymA 
-excerpt: The history of the copy is as old as the history of architecture itself. While Pliny the Elder considered the origin of painting to be the desire to reproduce the outline of a shadow, and Vitruvius did the same for sculpture when he described the Corinthian order as life emerging from death, the model as copy of the natural highlights the synthesis of the two disciplines as the boundary between any creative act and mimesis. 
 --- 
-<p>مهلت ارسال چکیده: ۱۵ فوریه ۲۰۲۲| ۲۶ بهمن ۱۴۰۰</p>
 <p dir="ltr"><strong>Architecture as copy or invention</strong></p>
 <p dir="ltr" style="text-align: justify;">The history of the copy is as old as the history of architecture itself. While Pliny the Elder considered the origin of painting to be the desire to reproduce the outline of a shadow, and Vitruvius did the same for sculpture when he described the Corinthian order as life emerging from death, the model as copy of the natural highlights the synthesis of the two disciplines as the boundary between any creative act and mimesis. An appropriate example is Roman architecture conceived as an aide-m&eacute;moire of the Greek model, with signs distinguishing between originals and replicas recognized only in the details of words and their formal variations.</p>
 <p dir="ltr" style="text-align: justify;">Today, new initiatives focus attention not only on the legacy and future of their collections, but also on the theoretical problem arising from the origin of form as memory and the reproduction techniques associated with it. Artists and architects such as Rachel Whiteread, Asta Gr&ouml;ting and Jorge Otero-Pailos, research projects of the kind headed by the V&amp;A at the 15th and 16th Venice Architecture Biennale, commemorative exhibitions like the one at the James-Simon-Galerie in Berlin, the work of practices such as Peter Zumthor&rsquo;s and pedagogical proposals by the Drawing Matter organization are just some examples of how unusually contemporaneous one of the possible models of study, replica by contact, has now become. Its scope must be addressed, along with many others, in all its complexity.</p>
 <p dir="ltr" style="text-align: justify;">The call for submission of articles to RA journal sets out to address the issue of architectural models in the terms outlined here. The aim is not to refer so much to examples that are well known in artistic literature as to monographs of case studies and theoretical essays that explore the origin and paradox of architecture as copy or invention using systems of replica or duplication, at the same time challenging concepts surrounding originality, authorship, completeness and memory. Aby Warburg alerted us to this: each age has the antiquity it deserves.</p>
-<p>&nbsp;</p>
+<p>مهلت ارسال چکیده: ۱۵ فوریه ۲۰۲۲| ۲۶ بهمن ۱۴۰۰</p>
 <p>اطلاعات بیشتر دربارۀ فراخوان: <a href="https://architexturez.net/pst/az-cf-221352-1630068384" target="_blank" rel="noopener">https://architexturez.net/pst/az-cf-221352-1630068384</a></p>
 <p>نشانی وبگاه مجلۀ معماری: <a href="https://revistas.unav.edu/index.php/revista-de-arquitectura/index" target="_blank" rel="noopener">https://revistas.unav.edu/index.php/revista-de-arquitectura/index</a></p>
