--- a/_posts/2021-09-20-rW3d.html
+++ b/_posts/2021-09-20-rW3d.html
@@ -1,5 +1,5 @@
 --- 
-title: "کارگاه مجازی: «معماری و متن: بررسی نقش و عیار متن در ایجاد تحول در معماری معاصر ایران؛ معرفی و بازخوانی انتقادی تعدادی از متن‌های انتخابی دربارۀ شناخت معماری دوره‌های باستان، اسلامی و معاصر»" 
+title: " «معماری و متن: بررسی نقش و عیار متن در ایجاد تحول در معماری معاصر ایران؛ معرفی و بازخوانی انتقادی تعدادی از متن‌های انتخابی دربارۀ شناخت معماری دوره‌های باستان، اسلامی و معاصر»| کارگاه مجازی" 
 authors: asmaneh 
 types: news 
 featured: false
@@ -7,7 +7,7 @@ featureImg: "/assets/img/posts/rW3d.jpg"
 slug: rW3d 
 gallery: 
 - image_path: "/assets/img/posts/rW3d.jpg" 
-  title: "کارگاه مجازی: «معماری و متن: بررسی نقش و عیار متن در ایجاد تحول در معماری معاصر ایران؛ معرفی و بازخوانی انتقادی تعدادی از متن‌های انتخابی دربارۀ شناخت معماری دوره‌های باستان، اسلامی و معاصر»" 
+  title: " «معماری و متن: بررسی نقش و عیار متن در ایجاد تحول در معماری معاصر ایران؛ معرفی و بازخوانی انتقادی تعدادی از متن‌های انتخابی دربارۀ شناخت معماری دوره‌های باستان، اسلامی و معاصر»| کارگاه مجازی" 
  
 --- 
 <p>مدرس: محمدرضا حائری</p>
