--- a/_posts/2021-09-18-cKdg.html
+++ b/_posts/2021-09-18-cKdg.html
@@ -1,5 +1,5 @@
 --- 
-title: "نشست تخصصی مجازی: «بررسی ردیف آوازی در تعزیه‌خوانی»" 
+title: "«بررسی ردیف آوازی در تعزیه‌خوانی»: نشست تخصصی مجازی:" 
 authors: asmaneh 
 types: news 
 tags: موسیقی سنتی,موسیقی ایرانی,موسیقی ایران,تعزیه,تعزیه‌خوانی,ردیف آوازی,موسیقی دستگاهی,ردیف موسیقی دستگاهی 
@@ -8,7 +8,7 @@ featureImg: "/assets/img/posts/cKdg.jpg"
 slug: cKdg 
 gallery: 
 - image_path: "/assets/img/posts/cKdg.jpg" 
-  title: "نشست تخصصی مجازی: «بررسی ردیف آوازی در تعزیه‌خوانی»" 
+  title: "«بررسی ردیف آوازی در تعزیه‌خوانی»: نشست تخصصی مجازی:" 
  
 --- 
 <p>سخنرانان: داود فتحعلی، سیدمحسن هاشمی</p>
