--- a/_posts/2021-09-17-eJFT.html
+++ b/_posts/2021-09-17-eJFT.html
@@ -1,16 +1,4 @@
 --- 
-title: "شب عباس جوانمرد و گروه هنر ملّی (۳)" 
-authors: asmaneh 
-types: news 
-tags: تاریخ هنر معاصر ایران,گروه هنر ملی,عباس جوانمرد 
-featured: false
-featureImg: "/assets/img/posts/eJFT.jpg" 
-slug: eJFT 
-gallery: 
-- image_path: "/assets/img/posts/eJFT.jpg" 
-  title: "شب عباس جوانمرد و گروه هنر ملّی (۳)" 
- 
+published: false 
 --- 
-<p>زمان: شنبه ۲۷ شهریور ۱۴۰۰، ساعت ۲۰:۳۰</p>
-<p>سخنران: محمدرضا خاکی</p>
-<p>این سخنرانی&zwnj; از طریق اینستاگرامِ کتابسرای اردیبهشت پخش می&zwnj;شود. نشانی: <a href="https://www.instagram.com/ordibeheshtbookshop_2/" target="_blank" rel="noopener">https://www.instagram.com/ordibeheshtbookshop_2/</a></p>
+  
