--- a/_posts/2021-09-07-zjgk.html
+++ b/_posts/2021-09-07-zjgk.html
@@ -9,11 +9,11 @@ gallery:
   title: "" 
  
 --- 
-<p>◾️متأسفانه محسن میرحیدر، معمار و مدرس باسابقۀ معماری درگذشت.</p>
+<p>متأسفانه محسن میرحیدر، معمار و مدرس باسابقۀ معماری درگذشت.</p>
 <p>&nbsp;</p>
 <p>محسن میرحیدر از مؤسسان مهندسان مشاور پیرراز بود که یکی از مشهورترین پروژه&zwnj;های آن ساختمان کتابخانۀ ملی ایران در تپه&zwnj;های عباس&zwnj;آباد تهران است.&nbsp;&nbsp;</p>
 <p>میرحیدر در سال ۱۳۵۰ با همراهی امیرنصرت منقح و یوسف شریعت&zwnj;زاده، شرکت مهندسان مشاور &laquo;بنیان&raquo; را تاسیس&nbsp; کرد که در پی تحولات اساسی در ساختار آن، در سال ۱۳۶۲ با نام مهندسان مشاور پیرراز با مشارکت جمعی از شرکا، همکاران و کارکنان اولیه تجدید سازمان شد.</p>
 <p>محسن میرحیدر مدیریت و سرپرستى پروژه&zwnj;هایى چون &laquo;کاخ مرکزی جوانان&raquo;، &laquo;سینما صحرا&raquo;، &laquo;ساختمان&zwnj;هاى اولیۀ دانشگاه کرمان&raquo;، &laquo;بیمارستان آموزشى کرمان&raquo;، &laquo;مرکز اجلاس سران کشورهاى اسلامى، و &laquo;مرکز اسناد و تاریخ دیپلماسى وزارت امورخارجه&raquo; را بر عهده داشته است.</p>
 <p>&nbsp;</p>
 <p>▫️تصاویر بیشتر:</p>
-<p>http://pirraz.com/per/Projects.aspx</p>
+<p dir="ltr"><a href="http://pirraz.com/per/Projects.aspx">http://pirraz.com/per/Projects.aspx</a></p>
