--- a/_posts/2021-08-30-NrrV.html
+++ b/_posts/2021-08-30-NrrV.html
@@ -16,19 +16,19 @@ gallery:
 <p>سخنران: نادیا علی</p>
 <p>زمان: ۲۳ سپتامبر ۲۰۲۱|۱ مهر ۱۴۰۰</p>
 <p>نشانی ثبت&zwnj;نام در جلسه:</p>
-<p>https://harvard.zoom.us/webinar/register/WN_FlZE45GbSRCfj0g6WlZjlA</p>
+<p dir="ltr"><a href="https://harvard.zoom.us/webinar/register/WN_FlZE45GbSRCfj0g6WlZjlA">https://harvard.zoom.us/webinar/register/WN_FlZE45GbSRCfj0g6WlZjlA</a></p>
 <p>&nbsp;</p>
 <p>▪️سخنرانی دوم: &laquo;شاه&zwnj;جهان&zwnj;آباد: شهر شاه&zwnj;جهان آنچنان که در&nbsp; پادشاه&zwnj;نامه وصف شده است&raquo;</p>
 <p>سخنران: گل&zwnj;فشان&zwnj; خان</p>
 <p>زمان: ۴ نوامبر ۲۰۲۱|۱۳ آبان&nbsp; ۱۴۰۰</p>
 <p>نشانی ثبت&zwnj;نام در جلسه:</p>
-<p>https://harvard.zoom.us/webinar/register/WN_-Qc2GzQtR6Gyzg3ojdbpyA</p>
+<p dir="ltr"><a href="https://harvard.zoom.us/webinar/register/WN_-Qc2GzQtR6Gyzg3ojdbpyA">https://harvard.zoom.us/webinar/register/WN_-Qc2GzQtR6Gyzg3ojdbpyA</a></p>
 <p>&nbsp;</p>
 <p>▪️سخنرانی سوم: &laquo;ساختن خلافت: آبادانی و ویرانی و&nbsp; هویت فرقه&zwnj;ای در معماری متقدم فاطمیان&raquo;</p>
 <p>سخنران: جنیفر پروییت</p>
 <p>زمان: ۱۸ نوامبر ۲۰۲۱|۲۷ آبان&nbsp; ۱۴۰۰</p>
 <p>نشانی ثبت&zwnj;نام در جلسه:</p>
-<p>https://harvard.zoom.us/webinar/register/WN_xyP44tJaTVOyWTM3idDAtA</p>
+<p dir="ltr"><a href="https://harvard.zoom.us/webinar/register/WN_xyP44tJaTVOyWTM3idDAtA">https://harvard.zoom.us/webinar/register/WN_xyP44tJaTVOyWTM3idDAtA</a></p>
 <p>&nbsp;</p>
 <p>اطلاعات بیشتر:</p>
-<p>https://agakhan.fas.harvard.edu/news-events</p>
+<p dir="ltr"><a href="https://agakhan.fas.harvard.edu/news-events">https://agakhan.fas.harvard.edu/news-events</a></p>
