--- a/_posts/2021-08-13-Cu7b.html
+++ b/_posts/2021-08-13-Cu7b.html
@@ -2,13 +2,10 @@
 title: "از زاکانی به زاکانی" 
 authors: سلمان رضوی کوهپایه 
 types: blog 
-tags: زاکانی 
+tags: زاکانی,نقد معماری,نقد اجتماعی معماری,نقد سیاسی معماری,شهرداری تهران,شهردار تهران,عبید زاکانی,علیرضا زاکانی 
 featured: false
 slug: Cu7b 
 --- 
-<p><strong>از زاکانی به زاکانی</strong></p>
-<p>سلمان رضوی کوهپایه</p>
-<p>&nbsp;</p>
 <p>در این ایام که خبر حسن انتخاب شورای مکرم شهر تهران شخصی نکونام و توانا و شایسته را به منصب شهرداری جان &rlm;این بنده را از شور و شعف آکنده است، چندان دل بدان مشغول داشته&zwnj;ام که دوش، شیخ محمدحسن سیرجانی، &rlm;نبیّ&zwnj;السّارقین، را به خواب دیدم؛ سخت شادان و خندان. گفتم: ای شیخ، این حال از چیست؟ مرا اشارتی کرد به کتاب &rlm;شریف اخلاق الاشراف. گفت این کتاب وصیت&zwnj;نامه&zwnj;ای است از زاکانی&zwnj;ای به زاکانی&zwnj;ای. باید که از پس هفتصد سال، &rlm;وصیت او به زاکانی رسانی. صفحاتی از آن کتاب شریف را به من نمود که شهردار تازۀ پایتخت نصب&zwnj;العین و آویزۀ &rlm;گوش گرداند:&rlm;</p>
 <p>نخست در باب خوان یغمای شهرداری فرمود که به نصحیت خواجه عبید گوش بدارد و مباد که ایثار بر انبار &rlm;گزیند:&rlm;</p>
 <p>&rlm;&laquo;در این روزها، بزرگ&zwnj;زاده&zwnj;ای خرقه&zwnj;ای به درویشی داد. مگر طاعنانْ خبر این واقعه به سمع پدرش رسانیدند. با پسر در این &rlm;باب عتاب می&zwnj;کرد. پسر گفت: در کتابی خواندم که هر که بزرگی خواهد یابد، هرچه دارد ایثار کند. من بدان هوس این &rlm;خرقه را ایثار کردم. پدر گفت: ای ابله، غلط در لفظ &laquo;ایثار&raquo; کرده&zwnj;ای، که به تصحیف خوانده&zwnj;ای. بزرگان گفته&zwnj;اند که هرکه &rlm;بزرگی خواهد یابد، هرچه دارد &laquo;انبار&raquo; کند، تا بدان عزیز باشد. نبینی که اکنون همۀ بزرگان انبارداری می&zwnj;کنند؟ شاعر &rlm;گوید: اندک&zwnj;اندک به&zwnj;هم شود بسیار/ دانه&zwnj;دانه&zwnj;ست غله در انبار&raquo;&rlm;</p>
