--- a/_posts/2021-08-29-Jhrq.html
+++ b/_posts/2021-08-29-Jhrq.html
@@ -1,21 +1,4 @@
 --- 
-title: "خانه‌های محلۀ قبلۀ کوخرد، بستک| برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران؛ سهیل وحدانی" 
-authors: asmaneh 
-types: news 
-tags: دفاع,کارشناسی ارشد,مطالعات معماری,کوخرد,بستک,سهیل وحدانی 
-featured: false
-slug: Jhrq 
-gallery: 
-- image_path: "/assets/img/posts/Jhrq-1.jpg" 
-  title: "" 
- 
+published: false 
 --- 
-<p>روستای کوخرد از توابع شهرستان بستک در استان هرمزگان است. در این روستا سکونت سابقه&zwnj;ای طولانی دارد و تا به امروز نیز، معماری منحصر به فرد آن باقی مانده است. شیوۀ زندگی و معماری&zwnj;ای که در پاسخ به آن شکل گرفته است، معماری این روستا را واجد عناصر، سازمان&zwnj;دهی، و تزییناتی خاص کرده است.</p>
-<p>در این تحقیق، مبتنی بر آرای ایمس راپوپورت، فرض بر این است که &laquo;معماری یکی از مظاهر فرهنگ است&raquo;؛ از این رو، سعی داریم با شناخت خانه&zwnj;های محلۀ قبلۀ کوخرد بفهمیم که فرهنگ چگونه در معماری نمود پیدا می&zwnj;کند. برای تبیین پیوند فرهنگ و معماری&nbsp; و تدوین چارچوب نظری این تحقیق به آراء راپوپورت رجوع می&zwnj;کنیم و یکی از راهبردهای پیشنهادی او در مطالعات رفتار- محیط&nbsp; را مبنای این بررسی قرار می&zwnj;دهیم.&nbsp;</p>
-<p>راهبرد این تحقیق کیفی، توصیفی - تحلیلی است؛ مبتنی بر گزینش و توصیف برخی متغیر&zwnj;های فرهنگی (ارزش&zwnj;ها، سبک زندگی، نظام فعالیت&zwnj;ها) متناسب با بستر تحقیق و بررسی پیوند آنها با کالبد خانه&zwnj;ها در محلۀ قبله کوخرد. خانه&zwnj;ها بر اساس عناصر ثابت، نیمه ثابت و غیرثابتشان تفکیک و بررسی شده&zwnj;اند. اطلاعات مورد نیاز این تحقیق به&zwnj;وسیلۀ مشاهده و مصاحبه با ساکنان سه&zwnj; خانه از خانه&zwnj;های این محله و برداشت از بنای آنها به دست آمده است؛ ۱. خانۀ محمد علی ایوب؛ ۲. خانۀ یوسف جم(بگ)؛ و ۳. خانۀ محمد توفیق. پیش از بحث از کالبد خانه و نسبت آن با چارچوب نظری تحقیق، پیشینه&zwnj;ای از هر خانه نیز ذکر شده است.</p>
-<p>در نهایت شاهد اشتراکات و تفاوت&zwnj;هایی در خانه&zwnj;ها هستیم. اشتراکات استنباط&zwnj;شده دستاورد اصلی این تحقیق است که می&zwnj;تواند بر&nbsp; فرهنگ مردم این منطقه و تأثیر آن بر سبک زندگی و معماری&zwnj;شان دلالت کند؛ این خانه&zwnj;ها دارای فضاهای مشابهی هستند که با نظام ساماندهی مشابهی انتظام یافته&zwnj;اند و محمل فعالیت&zwnj;های مشابهی هستند: پیش&zwnj;آواز، دهرز، مجلس، ساباط و سه خانه از مهم&zwnj;ترین این فضاهاست. در هریک از این فضا&zwnj;ها فعالیت خاصی انجام می&zwnj;شده که نشان می&zwnj;دهد هر خانواده چگونه با نظر به خواست&zwnj;ها، نیاز&zwnj;ها و ویژگی&zwnj;های فرهنگی&zwnj;شان کالبد خانه را سازمان&zwnj;دهی کرده&zwnj;اند. همچنین تفاوت&zwnj;ها در سبک زندگی موجب شده که از فضا&zwnj;هایی با خصوصیات یکسان استفاده&zwnj;هایی متفاوت شود؛ چنان&zwnj;که در اتاق جانبی ساباط در خانۀ ایوب فعالیت آشپزی صورت می&zwnj;گیرد، اما در دو خانۀ دیگر این اتاق&zwnj;ها، اتاق&zwnj;های استراحت&zwnj;اند.</p>
-<p>دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
-<p>خانه&zwnj;های محلۀ قبلۀ کوخرد، بستک| سهیل وحدانی</p>
-<p>استادان راهنما: دکتر زهرا اهری، دکتر مهنام نجفی</p>
-<p>داوران: دکتر زهره تفضلی، دکتر عاطفه کرباسی</p>
-<p>زمان: دوشنبه ۸ شهریور ۱۴۰۰، ساعت ۱۴</p>
+  
