--- a/_posts/2021-08-23-kXmh.html
+++ b/_posts/2021-08-23-kXmh.html
@@ -1,21 +1,21 @@
 --- 
-title: "برگزاری سخنرانی مجازی: «تجلیل از احمد اشرف: یک عمر کوشش در مطالعات ایران»" 
+title: "«تجلیل از احمد اشرف: یک عمر کوشش در مطالعات ایران»؛ برگزاری سخنرانی مجازی" 
 authors: asmaneh 
 types: news 
+tags: احمد اشرف,مطالعات,ایران,سخنرانی 
 featured: false
 featureImg: "/assets/img/posts/kXmh.jpg" 
 slug: kXmh 
 gallery: 
 - image_path: "/assets/img/posts/kXmh.jpg" 
-  title: "برگزاری سخنرانی مجازی: «تجلیل از احمد اشرف: یک عمر کوشش در مطالعات ایران»" 
+  title: "«تجلیل از احمد اشرف: یک عمر کوشش در مطالعات ایران»؛ برگزاری سخنرانی مجازی" 
  
 --- 
+<p>احمد اشرف&nbsp; از اثرگذارترین دانشوران در تاریخ اجتماعی و جامعه&zwnj;شناسی تاریخی ایران مدرن است و نقشی بسیار مهم در توسعۀ حوزۀ مطالعات ایرانی داشته است. به مدت بیش از نیم&zwnj;قرن، دکتر اشرف بدنۀ دانش باارزشی ایجاد کرد که در کانون مباحث موجود دربارۀ ظهور سرمایه&zwnj;داری، تحولات روستایی، ملت&zwnj;سازی، شکل&zwnj;گیری طبقات و فرهنگ در ایران باقی خواهد ماند.</p>
+<p>این جلسه و شمارۀ ویژه&zwnj;ای از نشریۀ ایران&zwnj;نامگ به تجلیل از یک عمر فعالیت علمی احمد اشرف در مطالعات ایرانی اختصاص خواهد داشت.</p>
+<p>اطلاعات بیشتر و ثبت&zwnj;نام در این سخنرانی:</p>
+<p dir="ltr"><a href="https://iran.princeton.edu/events/celebrating-ahmad-ashraf-lifetime-contribution-iranian-studies">https://iran.princeton.edu/events/celebrating-ahmad-ashraf-lifetime-contribution-iranian-studies</a><br /><br /></p>
 <p>برگزاری سخنرانی مجازی: &laquo;تجلیل از احمد اشرف: یک عمر کوشش در مطالعات ایران&raquo;</p>
 <p>سخنرانان: علی بنوعزیزی، فرهاد کاظمی، محمد توکلی طَرقی</p>
 <p>میزبان: مرکز شرمین و بیژن مصوّر رحمانی برای مطالعات ایران و خلیج فارس</p>
 <p>زمان: ۱۵ سپتامبر ۲۰۲۱| ۲۴ شهریور ۱۴۰۰</p>
-<p>&nbsp;</p>
-<p>احمد اشرف&nbsp; از اثرگذارترین دانشوران در تاریخ اجتماعی و جامعه&zwnj;شناسی تاریخی ایران مدرن است و نقشی بسیار مهم در توسعۀ حوزۀ مطالعات ایرانی داشته است. به مدت بیش از نیم&zwnj;قرن، دکتر اشرف بدنۀ دانش باارزشی ایجاد کرد که در کانون مباحث موجود دربارۀ ظهور سرمایه&zwnj;داری، تحولات روستایی، ملت&zwnj;سازی، شکل&zwnj;گیری طبقات و فرهنگ در ایران باقی خواهد ماند.</p>
-<p>این جلسه و شمارۀ ویژه&zwnj;ای از نشریۀ ایران&zwnj;نامگ به تجلیل از یک عمر فعالیت علمی احمد اشرف در مطالعات ایرانی اختصاص خواهد داشت.</p>
-<p>🔸اطلاعات بیشتر و ثبت&zwnj;نام در این سخنرانی:</p>
-<p>https://iran.princeton.edu/events/celebrating-ahmad-ashraf-lifetime-contribution-iranian-studies</p>
