--- a/_posts/2021-07-08-9JC8.html
+++ b/_posts/2021-07-08-9JC8.html
@@ -1,28 +1,4 @@
 --- 
-title: "مسجد ۹۰۰ سالۀ شیرازی‌ها در جزیرۀ زنگبار" 
-authors: مرتضی رضوان‌فر 
-types: blog 
-tags: مسجد,شیرازی‌,زنگبار,مرتضی رضوان‌فر 
-featured: false
-featureImg: "/assets/img/posts/9JC8.jpg" 
-slug: 9JC8 
-gallery: 
-- image_path: "/assets/img/posts/9JC8.jpg" 
-  title: "مسجد ۹۰۰ سالۀ شیرازی‌ها در جزیرۀ زنگبار" 
-- image_path: "/assets/img/posts/9JC8-1.jpg" 
-  title: "" 
-- image_path: "/assets/img/posts/9JC8-2.jpg" 
-  title: "" 
-- image_path: "/assets/img/posts/9JC8-3.jpg" 
-  title: "" 
-- image_path: "/assets/img/posts/9JC8-4.jpg" 
-  title: "" 
- 
+published: false 
 --- 
-<p><strong>مسجد ۹۰۰ سالۀ شیرازی&zwnj;ها در جزیرۀ زنگبار</strong></p>
-<p>مرتضی رضوانفر</p>
-<p>&nbsp;</p>
-<p>مسجد کیزیمکازی طبق کتیبۀ محراب، در سال ۵۰۰ق (بیش از ۹۴۰ سال پیش) ساخته شده است. این نوع طراحی سه پره&zwnj;ای در محراب (بر اساس مشاهده) بعدها در برخی مساجد تانزانیا و کنیا، توسط اقوام شیرازی، بلوچ، شوشتری، کازرونی و عُمانی استفاده شده است، از جمله در مسجد شوشتری&zwnj;ها در زنگبار و یا مسجد بلوچ&zwnj;ها در کائوله.&nbsp;</p>
-<p>پس از مسجد جامع جزیره کیلوا در تانزانیا، مسجد کیزیمکازی قدیمی&zwnj;ترین مسجدی است که شیرازی&zwnj;ها در آفریقا ساختند و هنوز مورد استفاده نمازگزاران قرار می&zwnj;گیرد. همچنین هرساله گردشگران بسیاری از آن دیدن می&zwnj;کنند.</p>
-<p>دیوید وایتهاوس (۱۹۴۱- ۲۰۱۳م)، باستان&zwnj;شناس بریتانیایی، که چند فصل کاوش در ایران و آفریقا داشته است، کتیبۀ کوفیِ مسجد کیزیمکازی را مشابه کتیبه&zwnj;های بندر سیراف در ایران می&zwnj;داند.</p>
-<p>مسجد کیزیمکازی تقریبا در نزدیکی روستای ماکوندوچی است که همهٔ اهالی&zwnj;اش، خود را شیرازی می&zwnj;نامند و مراسم نوروز (نیروزی) را در مرداد ماه و تقریبا همزمان با مراسم نوروز دریایی (صیادی) در ایران برگزار می&zwnj;کنند.&nbsp;</p>
+  
