--- a/_posts/2017-09-16-RAi5.html
+++ b/_posts/2017-09-16-RAi5.html
@@ -3,7 +3,16 @@ title: "فن معماران در مطلع العلوم"
 authors: r.mojtahedzadeh 
 types: blog 
 featured: false
+featureImg: "/assets/img/posts/RAi5.jpg" 
 slug: RAi5 
+gallery: 
+- image_path: "/assets/img/posts/RAi5.jpg" 
+  title: "فن معماران در مطلع العلوم" 
+- image_path: "/assets/img/posts/RAi5-1.jpg" 
+  title: "تصویر فن معماران در نسخه خطی مطلع العلوم" 
+- image_path: "/assets/img/posts/RAi5-2.jpg" 
+  title: "تصویر فن معماران در نسخه خطی مطلع العلوم" 
+ 
 --- 
 <div>
 <div>
@@ -20,10 +29,11 @@ slug: RAi5
 <p><strong>پی&zwnj;نوشت:</strong></p>
 </div>
 </div>
-<p>&nbsp;</p>
 <div>۱. نحس بودن مربع، که اصطلاحا نحوست تربیع نامیده می&zwnj;شود، گویی عقیده&zwnj;ای رایج در هنر سنتی بوده است. در کتابت و اسناد خطی شواهد مفصلی از آن در دست است که دستمایه مقاله&zwnj;ای با همین کلید واژه (نحوست تربیع و تجلی این باور در اسناد دوره اسلامی) از محقق دانشمند آقای عمادالدین شیخ&zwnj;الحکمایی در مجله نامه بهارستان (سال هشتم و نهم 87-1386، دفتر 14-13) شده است. نوشته واجدعلی&zwnj;خان می&zwnj;تواند اشاره&zwnj;ای به رواج این باور در معماری باشد.</div>
 <div>۲. هرچند حرف اضافه \"با\" زائد به نظر میرسد اما در نسخه خطی چنین ضبط شده است.</div>
 <div>۳. واژه خوانا نیست.</div>
 <div>۴. تهانوی در فرهنگ کشاف المعیّن، بکسر یای مشدّده، نزد مهندسین شکلی مسطح، متساوی الاضلاع با خطوط مستقیم که فاقد زاویه قائمه است و زوایای آن متقابلا مساویاند؛ تعریف شده است. بدیهی است این تعریف همان شکل هندسی لوزی است.</div>
 <div>۵. این جمله در فارسی امروزی بدین صورت ادا میشود "که شان عمارت از خوبی و&nbsp;زیبایی دروازه اش&nbsp;ظاهر و نمایان شود." اما در نسخه خطی به همان شکل که در متن آمده ضبط شده است.</div>
 <div>۶. در نسخه خطی به همین شکل (دازند) ضبط شده است.</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
