--- a/_posts/2021-07-13-U2KT.html
+++ b/_posts/2021-07-13-U2KT.html
@@ -1,15 +1,4 @@
 --- 
-title: "گذشته سرزمینی بیگانه است" 
-authors: mqayoomi 
-types: blog 
-tags: گذشته,مهرداد قیومی,دیوید لوئنتال 
-featured: false
-slug: U2KT 
+published: false 
 --- 
-<p><strong>گذشته سرزمینی بیگانه است</strong></p>
-<p>دیوید لوئنتال| ترجمۀ مهرداد قیومی</p>
-<p>&nbsp;</p>
-<p>رمان میانجی (The Go-Between)، نوشته&zwnj;ی ال. پی. هارتلی (L. P. Hartley)، با این جملات آغاز می&zwnj;شود: &laquo;گذشته سرزمینی بیگانه است. اهل آنجا طور دیگری &rlm;رفتار می&zwnj;کنند&raquo;. این که گذشتگان واقعاً طور دیگری عمل می&zwnj;کرده&zwnj;اند دیدگاهی کاملاً جدید است. در طی بیشترِ تاریخ، &rlm;انسان&zwnj;ها حال را از گذشته به&zwnj;سختی جدا می&zwnj;کردند؛ حتی از رویدادهای دور طوری سخن می&zwnj;گفتند که انگار همان&zwnj;وقت در &rlm;حال روی دادن است. تا سدۀ نوزدهم، کسانی که تصوری از گذشتۀ تاریخی داشتند آن را بسیار شبیه حال می&zwnj;شمردند. &rlm;داستان تاریخ را با تغییرات زیاد در زندگی و مکان نقل می&zwnj;کردند؛ اما سرشت انسان را ثابت می&zwnj;انگاشتند. در چشم ایشان، &rlm;آنچه باعث رویدادهای گذشته بود همان شورها و تعصباتی بود که رویدادهای حالِ آنها را پیش می&zwnj;آورد. گذشته، حتی &rlm;وقتی که نوستالژی بزرگش می&zwnj;داشت یا هواداران پیشرفت تحقیرش می&zwnj;کردند، سرزمینی بیگانه نبود؛ بلکه بخشی از خود &rlm;آنان بود. در وقایع&zwnj;نامه&zwnj;ها، زمان&zwnj;های گذشته را با چنان قربت و صمیمیتی تصویر می&zwnj;کردند برآمده از شباهتی که بین &rlm;گذشته و حال قایل بودند.&rlm;</p>
-<p>این نظرگاه دو پیامد خاص داشت: یکی این که آنچه را در گذشته مطابق معیارهای حال می&zwnj;یافتند فضیلت می&zwnj;شمردند و &rlm;می&zwnj;ستودند و آنچه را مغایر آنها می&zwnj;دیدند رذیلت می&zwnj;دانستند و محکوم می&zwnj;کردند. اوضاع و احوال گذشته را همچون حال و &rlm;موضوعاتش را از همان قبیل موضوعات حال می&zwnj;انگاشتند؛ پس گذشته را آکنده از مثال&zwnj;های مفید و عبرت&zwnj;گرفتنی &rlm;می&zwnj;یافتند. پیامد دیگر این بود که گذشته&zwnj;ای که آن را در چارچوبی مشابه حال توضیح می&zwnj;دادند بینش&zwnj;هایی در این باره به&zwnj;دست &rlm;می&zwnj;داد که علت رویدادهای حال آنان چیست. در نظر ایشان، چه تاریخ مطابق ارادۀ الهی پیش می&zwnj;رفت و چه قوانین &rlm;طبیعی، چه رو به انحطاط داشت و چه پیشرفت، الگویش قطعی و تغییرناپذیر و عام بود.</p>
-<p>&nbsp;</p>
-<p dir="ltr">David Lowenthal, The Past Is a Foreign Country, Cambridge: Cambridge &lrm;University Press, 1985, p. XVI.</p>
+  
