--- a/index.html
+++ b/index.html
@@ -20,36 +20,78 @@ layout: default
       </div>
       {% endfor %}
       <div class="row">
-        {% for post in recent_section offset:6 limit: 6 %}
+        {% for post in recent_section offset:6 limit: 2 %}
         {% include cardHorizental.html %}
         {%endfor%}
       </div>
       <div class="card-deck mt-4">
-        {% for post in recent_section offset:12 limit: 3 %}
+        {% for post in recent_section offset:8 limit: 3 %}
         {% include cardSmall.html %}
         {%endfor%}
-
       </div>
     </div>
   </section>
-  <section>
-    <div class="container-fluid px-5">
-    </div>
-  </section>
-  <section>
-  </section>
-
+  {% assign bultCats = site.categories | where: "type", "bulletins" %}
+  {% for bultCat in bultCats limit: 1 %}
   <section class="bg-black text-light">
     <div class="container-fluid py-4">
       <div class="row px-4">
         <div class="h3 py-2 px-3 mt-auto border border-3 border-light mb-3">
-          پرونده ویژه: شهر جمهوری اسلامی
+          پرونده {{bultCat.title}}
         </div>
       </div>
       <div class="card-deck">
-        {% assign special_issue = site.posts | where: "categories", "ircity" %}
+        {% assign special_issue = site.posts | where: "categories", bultCat.slug %}
       {% for post in special_issue limit:4 %}
         {% include cardVertical.html %}
         {% endfor %}
       </div>
-      </section>
+    </div>
+  </section>
+  {% endfor %}
+  <section>
+    <div class="container-fluid px-5 pb-4">
+      <div class="card-deck mt-4">
+        {% for post in recent_section offset:11 limit: 3 %}
+        {% include cardSmall.html %}
+        {%endfor%}
+      </div>
+      <div class="card-deck mt-4">
+        {% for post in recent_section offset:14 limit: 3 %}
+        {% include cardSmall.html %}
+        {%endfor%}
+      </div>
+      {% for post in recent_gallery limit:1 offset: 1 %}
+      <div class="row py-1">
+        {% include sectionGallery.html %}
+      </div>
+      {% endfor %}
+      <div class="card-deck mt-4">
+        {% for post in recent_section offset:17 limit: 3 %}
+        {% include cardSmall.html %}
+        {%endfor%}
+      </div>
+      <div class="card-deck mt-4">
+        {% for post in recent_section offset:20 limit: 3 %}
+        {% include cardSmall.html %}
+        {%endfor%}
+      </div>
+    </div>
+  </section>
+  <section class="bg-black text-light">
+    <div class="container-fluid py-4">
+      <div class="row px-4">
+        <div class="h3 py-2 px-3 mt-auto border border-3 border-light mb-3">
+          سایر پرونده‌ها
+        </div>
+      </div>
+      <div class="card-deck">
+        {% for bultCat in bultCats offset:1 limit:4 %}
+        {% assign special_issue = site.posts | where: "categories", bultCat.slug %}
+        {% for post in special_issue limit:1 %}
+        {% include cardVertical.html %}
+        {% endfor %}
+        {% endfor %}
+      </div>
+    </div>
+  </section>
